[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/node-litesvm/tests/clock-example"]

[workspace.package]
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/LiteSVM/litesvm"
rust-version = "1.86.0"

[workspace.dependencies]
agave-feature-set = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
agave-precompiles = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
agave-reserved-account-keys = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
agave-syscalls = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
ansi_term = "0.12"
bincode = "1.3"
bv = "0.11.1"
criterion = "0.8"
ed25519-dalek = "1.0.1"
hashbrown = "0.16.0"
indexmap = "2.12"
itertools = "0.14"
libsecp256k1 = "0.7.2"
litesvm = { path = "crates/litesvm", version = "0.9" }
log = "0.4"
napi = { version = "3.5.2", default-features = false }
napi-build = "2.3.1"
napi-derive = "3.3.3"
qualifier_attr = "0.2.2"
serde = "1.0"
smallvec = "1.13"
solana-account = "3.3"
solana-address = "2.0"
solana-address-lookup-table-interface = "~3.0"
solana-bpf-loader-program = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-builtins = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-clock = "~3.0"
solana-compute-budget = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-compute-budget-instruction = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-compute-budget-interface = "~3.0"
solana-config-interface = "2.0.0"
solana-ed25519-program = "~3.0"
solana-epoch-rewards = "~3.0"
solana-epoch-schedule = "~3.0"
solana-fee = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-fee-structure = "~3.0"
solana-hash = "4.0"
solana-instruction = "~3.1"
solana-instructions-sysvar = "~3.0"
solana-keypair = "~3.1"
solana-last-restart-slot = "~3.0"
solana-loader-v3-interface = "6.1"
solana-loader-v4-interface = "3.0"
solana-message = "~3.0"
solana-native-token = "~3.0"
solana-nonce = "~3.0"
solana-nonce-account = "~3.0"
solana-precompile-error = "~3.0"
solana-program-error = "~3.0"
solana-program-option = "~3.0"
solana-program-pack = "~3.0"
solana-program-runtime = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-rent = "3.1"
solana-sdk-ids = "~3.1"
solana-secp256k1-program = "~3.0"
solana-sha256-hasher = "~3.1"
solana-signature = "~3.1"
solana-signer = "~3.0"
solana-slot-hashes = "~3.0"
solana-slot-history = "~3.0"
solana-stake-interface = "2.0.1"
solana-svm-callback = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-svm-log-collector = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-svm-timings = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-svm-transaction = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-system-interface = "3.0.0"
solana-system-program = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-sysvar = "~3.1"
solana-sysvar-id = "~3.1"
solana-transaction = "~3.0"
solana-transaction-context = { git = "https://github.com/txtx/solana", branch = "v3.1.6-increase-tx-size" }
solana-transaction-error = "~3.0"
solana-vote-interface = "5.0.0"
spl-associated-token-account-interface = "2.0"
spl-token-interface = "2.0"
spl-token-2022-interface = "2.0"
test-log = "0.2"
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"

[profile.bench]
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.clippy]
result_large_err = "allow"
